test/e2e/pass/ownership/borrow_temporary_string.cst
fn main() {
    println(&to_str(7));
}
