test/e2e/fail_compile/type_errors/whole_term_runtime_expr_stmt.cst
runtime fn source() -> num { 1 }

fn value() -> num {
    source();
    1
}

fn main() -> num {
    value()
}
